--- a/main.css
+++ b/main.css
@@ -7,20 +7,37 @@ ul {
   list-style-type: none;
 }
 
-body {
-    background:url(./img/background_purple.svg) no-repeat;
-    background-size: 100%;
+a {
+  text-decoration: none;
 }
 
-/* Header */
+body {
+  background-size: 100%;
+  background: radial-gradient(50% 50% at 50% 50%, #463734 0%, #1e2034 100%)
+    no-repeat;
+  background-attachment: fixed;
+  position: relative;
+  margin: 0;
+}
+
+.wrapper {
+  max-width: 1446px;
+  margin: 0 auto;
+  padding-bottom: 1000px;
+}
+
+/*-------------------------------------------------- Header-------------------------------------------- */
 .header {
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  margin-bottom: 159px;
+  top: 0;
+  left: 0;
+  position: sticky;
+  z-index: 3;
 }
 
 .header-nav {
-  max-width: 1446px;
   margin: 0 auto;
   display: flex;
   align-items: stretch;
@@ -29,15 +46,20 @@ body {
 }
 
 .header-nav__list {
-    text-transform: uppercase;
+  text-transform: uppercase;
   display: flex;
   align-items: center;
   justify-content: space-around;
   width: 100%;
   font-size: 13px;
   line-height: 19px;
-  /* color:#FFFFFF; */
+  font-weight: 600;
   opacity: 0.6;
+  letter-spacing: 1.85px;
+}
+
+.header-nav__list a {
+  color: #ffffff;
 }
 
 .header-nav__social {
@@ -45,4 +67,65 @@ body {
   align-items: center;
   width: 10%;
   justify-content: space-between;
+}
+
+/*--------------------------------------- Heading---------------------------------------------- */
+
+.promo {
+  min-width: 34%;
+  /* margin-left: 12.5%; */
+  display: flex;
+  z-index: 2;
+  flex-direction: column;
+}
+
+.job_description {
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  color: #eadba8;
+}
+
+.promo h1 {
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 38px;
+  line-height: 56px;
+  letter-spacing: 2px;
+  position: relative;
+}
+
+h1 span {
+  color: #eadba8;
+}
+.couple {
+  z-index: -1;
+  /* position: absolute; */
+  right: 0;
+}
+
+.job_btn {
+  text-transform: uppercase;
+  background-color: #f9354a;
+  border-radius: 50px;
+  padding: 15px 34px 15px 69px;
+  border: none;
+  color: #fff;
+  letter-spacing: 4px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 23px;
+  position: relative;
+  margin-right: 2%;
+  cursor: pointer;
+}
+
+.job_btn::before {
+  background: url(./img/phone_button.svg) no-repeat;
+  position: absolute;
+}
+
+.earning {
+  display: flex;
 }
